@startuml
skin rose
'https://plantuml.com/class-diagram

abstract class AbstractMsg {
    - Long msgId
    - Date sendTime
    - Boolean resend
    - MsgType msgType
    + {abstract} boolean isPersistentMsg()
}

abstract class Msg extends AbstractMsg {
    - String msgTopic
    - Object data
    + boolean isPersistentMsg()
}

abstract class PersistentMsg extends Msg {
    - Integer transferStatus // revd/sent/read
    - Date saveTime
    - Date recvTime
    + boolean isPersistentMsg() // true
}

class AckMsg extends AbstractMsg {
    Msg msgType=Ack
    ---
    - Long ackMsgId
    - Integer ackType
    + boolean isPersistentMsg() // false
}

note left of AckMsg {
    revd/sent/read  用于修改消息状态
}

enum MsgType {
    PersonalMsg
    GroupMsg
    Ack
    System
    EVENT
}

AbstractMsg --> MsgType

AckMsg --> PersistentMsg: 修改 transferStatus

class PersonalMsg extends PersistentMsg {
    - Long senderId
    - Long revrId
    - String relationTopic
}

class GroupMsg extends PersistentMsg {
    - Long senderId
    - Long groupId
}

class NotifMsg extends PersistentMsg {
    - Long revrId
}
@enduml